--- a/vercel.json
+++ b/vercel.json
@@ -5,12 +5,21 @@
         "src": "core/wsgi.py",
         "use": "@vercel/python",
         "config": { "maxLambdaSize": "15mb", "runtime": "python3.11" }
+      },
+      {
+        "src": "build_files.sh",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "core/staticfiles"
+        }
       }
     ],
+      
     "routes": [
       {
         "src": "/(.*)",
         "dest": "core/wsgi.py"
       }
-    ]
+    ],
+    "outputDirectory": "core/staticfiles"
   }
