--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,21 @@
 {
-  "version": 2,
-  "builds": [
+    "version": 2,
+    "builds": [
       {
-          "src": "core/wsgi.py",
-          "use": "@vercel/python",
-          "config": { "maxLambdaSize": "15mb", "runtime": "python3.11" }
+        "src": "core/wsgi.py",
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.11" }
       }
-  ],
-  "routes": [
+    ],
+    "routes": [
       {
-          "src": "/(.*)",
-          "dest": "core/wsgi.py"
+        "src": "/media/(.*)",
+        "dest": "/tmp/media/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "core/wsgi.py"
       }
-  ]
-}
+    ]
+  }
+  
